- Fix Bug #31960: msql_fetch_row() and msql_fetch_array() dropping columns     with NULL values