ext/msql/php_msql.c
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
  
-/* $Id: php_msql.c,v 1.57 2004/01/08 08:16:11 andi Exp $ */
+/* $Id: php_msql.c,v 1.58 2004/07/19 07:19:38 andi Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -958,9 +958,14 @@ static void php_msql_fetch_hash(INTERNAL_FUNCTION_PARAMETERS, int result_type)
 				add_assoc_stringl(return_value, msql_field->name, data, data_len, should_copy);
 			}
 		} else {
-			/*
-			add_get_index_stringl(return_value, i, "", 0, (void **) &pval_ptr, 1);
-			*/
+			/* NULL value. */
+			if (result_type & MSQL_NUM) {
+				add_index_null(return_value, i);
+			}
+
+			if (result_type & MSQL_ASSOC) {
+				add_assoc_null(return_value, msql_field->name);
+			}
 		}
 	}
 }
